--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,17 @@
-body {
+@font-face {
+  font-family: 'Mulish';
+  src: url('./fonts/Mulish-Italic-VariableFont_wght.ttf') format('ttf'),
+    url('./fonts/Mulish-VariableFont_wght.ttf') format('ttf');
+}
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+
+body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
